# ssl_simulator

./: .copier-answers.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .semgrep.yml  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.gitea/workflows/: ci.yml  docs.yml  publish.yml
.gitea/workflows/_env_setup/: action.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  python-app.yml
docs/: api.md  architecture.md  contributing.md  golden-path.md  index.md  usage.md
examples/: basic_usage.py  launch_simulation.ipynb  new_controller.ipynb  scalar_fields_test.ipynb  ssl_simulator_tutorial.ipynb  test.ipynb  test_scalar_fields.ipynb  visualiztion_so3.ipynb
examples/controllers/: __init__.py  dummy_high_lvl.py  oscillator.py
examples/visualization/: __init__.py  basic.py
examples/visualization/plots/: basic.py
scripts/: template_prune.py
scripts/ci/: _env.sh  setup-env.sh  test_workflows.sh
scripts/docs/: validate_docs.sh
scripts/release/: build.sh  publish.sh  publish_ci.sh
src/ssl_simulator/: __init__.py  config.py  exceptions.py  logging.py
src/ssl_simulator/components/: __init__.py
src/ssl_simulator/components/gvf/: __init__.py
src/ssl_simulator/components/gvf/plotters/: gvf_classic.py  gvf_ik.py
src/ssl_simulator/components/gvf/trajectories/: _gvf_traj.py  gvf_ellipse.py  gvf_line.py  gvf_line_AB.py  gvf_line_heading.py
src/ssl_simulator/components/network/: graph.py
src/ssl_simulator/components/scalar_fields/: __init__.py  _scalar_field.py  sigma_fract.py  sigma_gauss.py  sigma_nonconvex.py
src/ssl_simulator/controllers/: __init__.py  constant_signal.py  oscillator.py
src/ssl_simulator/core/: __init__.py  _controller.py  _robot_model.py  integrators.py  loggers.py  simulation_context.py  simulation_engine.py  types.py
src/ssl_simulator/logging/: __init__.py  decorators.py  formatters.py  levels.py  manager.py  utils.py
src/ssl_simulator/math/: algebra.py  basics.py  distributions.py  graphs.py  lie.py  source_seeking.py
src/ssl_simulator/robot_models/: __init__.py  single_integrator.py  unicycle_2d.py
src/ssl_simulator/utils/: __init__.py  debug.py  dict_ops.py  file_ops.py  path_ops.py  pprz.py  processing.py
src/ssl_simulator/visualization/matplotlib/methods/: patches.py  plot_3d.py
src/ssl_simulator/visualization/matplotlib/plots/: _plot.py  so3.py
src/ssl_simulator/visualization/matplotlib/plotters/: README.md  _plotter.py  _vector_field.py  robot_fixedwing.py  robot_uny.py  ss_si.py  ss_uny.py
src/ssl_simulator/visualization/matplotlib/utils/: anim.py  basics.py  figure_tools.py
ssl_simulator/: __init__.py  config.py  debug.py  exceptions.py  utils.py
ssl_simulator/components/: __init__.py
ssl_simulator/components/gvf/: __init__.py
ssl_simulator/components/gvf/plotters/: gvf_classic.py  gvf_ik.py
ssl_simulator/components/gvf/trajectories/: _gvf_traj.py  gvf_ellipse.py  gvf_line.py  gvf_line_AB.py  gvf_line_heading.py
ssl_simulator/components/network/: __init__.py  graph.py
ssl_simulator/components/scalar_fields/: __init__.py  _scalar_field.py  sigma_fract.py  sigma_gauss.py  sigma_nonconvex.py
ssl_simulator/controllers/: __init__.py  _controller.py  constant_signal.py  oscillator.py
ssl_simulator/core/: __init__.py  _controller.py  _controller_manager.py  _robot_model.py  integrators.py  loggers.py  simulation_context.py  simulation_engine.py  simulator_engine.py  utils.py
ssl_simulator/core/controllers/: __init__.py  _controller.py
ssl_simulator/core/data_manager/: __init__.py  logger.py  processing.py
ssl_simulator/core/math/: __init__.py  distributions.py  pprz.py  source_seeking.py
ssl_simulator/core/robot_models/: __init__.py  _robot_models.py  single_integrator.py  unicycle_2d.py
ssl_simulator/core/simulator_engine/: integrators.py  simulator_engine.py
ssl_simulator/data_manager/: __init__.py  logger.py
ssl_simulator/extensions/: __init__.py
ssl_simulator/extensions/gvf_trajectories/: __init__.py
ssl_simulator/extensions/network/: __init__.py
ssl_simulator/extensions/scalar_fields/: __init__.py  _scalar_field.py  sigma_fract.py  sigma_gauss.py  sigma_nonconvex.py
ssl_simulator/gvf_trajectories/: __init__.py  gvf_ellipse.py  gvf_line.py  gvf_line_AB.py  gvf_line_heading.py  gvf_traj.py  gvf_traj_ellipse.py  gvf_traj_line.py
ssl_simulator/math/: __init__.py  algebra.py  basics.py  distributions.py  graphs.py  lie.py  source_seeking.py
ssl_simulator/robot_models/: __init__.py  _robot_model.py  single_integrator.py  unicycle_2d.py
ssl_simulator/simulator_engine/: integrators.py  simulation.py
ssl_simulator/testing/: __init__.py
ssl_simulator/utils/: debug.py  dict_ops.py  file_ops.py  path_ops.py  pprz.py  processing.py
ssl_simulator/visualization/: __init__.py  _animation.py  _plot.py  _plotter.py  patches.py  utils.py
ssl_simulator/visualization/matplotlib/methods/: patches.py  plot_3d.py
ssl_simulator/visualization/matplotlib/plots/: _plot.py  so3.py
ssl_simulator/visualization/matplotlib/plotters/: README.md  _plotter.py  _vector_field.py  robot_fixedwing.py  ss_si.py  ss_uny.py
ssl_simulator/visualization/matplotlib/utils/: anim.py  basics.py  figure_tools.py
ssl_simulator/visualization/plotters/: _vector_field.py  anim_si_ss.py  anim_uny.py  anim_uny_ss.py  robot_fixedwing.py  robot_uny.py  sim_basic_uny.py  ss_si.py  ss_uny.py
tests/: _requirements.py  conftest.py  run_tests.sh  test_core.py  test_dep.sh  test_math.py  test_requirements.py  test_utils.py
tests/benchmarks/: conftest.py  test_bench_data_update.py  test_bench_dynamics.py  test_bench_integrators.py  test_bench_math.py  test_bench_simulation_engine.py
