[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssl_simulator"
dynamic = ["version"]
description = "Swarm Systems Lab Python Simulator"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Jesús Bautista Villar", email = "jesbauti20@gmail.com" }
]
dependencies = [
    "numpy>=1.23",
    "tqdm>=4.50",
    "pandas>=1.5",
    "scipy>=1.5",
    # Note: Direct git references prevent uploading to PyPI
    "lieplusplus_py @ git+https://github.com/Swarm-Systems-Lab/lieplusplus_py.git@master"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "matplotlib>=3.7",
    "matplotlib-inline>=0.1.6,<0.3",
    "IPython>=8.0",
    "ipykernel",
]
examples = [
    "matplotlib>=3.7",
    "matplotlib-inline>=0.1.6,<0.3"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/ssl_simulator/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ssl_simulator"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE"]
exclude = ["tests", "examples", "output"]

[tool.hatch.envs.default]
features = ["dev"]
[tool.hatch.envs.default.scripts]
format = "ruff format ."
lint = "ruff check --fix ."
check = "ruff check ."
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/ssl_simulator --cov-report=term-missing {args:tests}"
type-check = "mypy src/ssl_simulator"
all = ["format", "lint", "type-check", "test"]

[tool.hatch.envs.examples]
features = ["examples"]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve"
deploy = "mkdocs gh-deploy --force"

[tool.ruff]
line-length = 100
exclude = ["output"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "UP", "B", "A", "C4", "T20", "SIM", "Q", "RUF"]
ignore = ["D100", "D104", "F403", "F401", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true # Better than disallow_untyped_defs = false

[tool.coverage.run]
source = ["src/ssl_simulator"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
