[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssl_simulator"
dynamic = ["version"]
description = "Swarm Systems Lab Python Simulator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Jesús Bautista Villar", email = "jesbauti20@gmail.com" }
]
dependencies = [
    "numpy>=1.23",
    "tqdm>=4.50",
    "pandas>=1.5",
    "scipy>=1.5",
    # Note: Direct git references prevent uploading to PyPI
    "lieplusplus_py @ git+https://github.com/Swarm-Systems-Lab/lieplusplus_py.git@master"
]

[project.optional-dependencies]
# Only include things here that an END USER might want to install.
examples = [
    "matplotlib>=3.7",
    "matplotlib-inline>=0.1.6,<0.3",
    "IPython>=8.0",
    "ipykernel",
]

# --- PEP 735: Dependency Groups (The Modern Standard) ---
[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.14",
    "pre-commit>=3.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
examples = [
    "matplotlib>=3.7",
    "matplotlib-inline>=0.1.6,<0.3",
    "IPython>=8.0",
    "ipykernel",
]

# --- Hatch Configuration ---
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/ssl_simulator/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ssl_simulator"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE"]
exclude = ["tests", "examples", "output"]

# --- Environment Management ---
[tool.hatch.envs.default]
# This pulls in the 'dev' and 'test' groups automatically
dependencies = [
    { include-group = "dev" },
    { include-group = "test" }
]
features = ["examples"] # Includes the matplotlib stuff for local dev

[tool.hatch.envs.default.scripts]
format = "ruff format ."
lint = "ruff check --fix ."
check = "ruff check ."
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/ssl_simulator --cov-report=term-missing {args:tests}"
type-check = "ty check src/ssl_simulator"
all = ["format", "lint", "type-check", "test"]

[tool.hatch.envs.docs]
dependencies = [
    { include-group = "docs" }
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve"
deploy = "mkdocs gh-deploy --force"

# --- Tool Configuration ---
[tool.ruff]
line-length = 100
exclude = ["output"]
target-version = "py310" # Updated to match project version

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort (Import sorting)
    "UP",     # pyupgrade (Modernizes syntax automatically)
    "B",      # flake8-bugbear (Catches common bugs)
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print (Warns about print statements)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "E501",   # Line too long (handled by formatter)
    "F403",
    "F401",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["src/ssl_simulator"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
