[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "ssl_simulator"
dynamic = ["version"]
description = "Swarm Systems Lab Python Simulator"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jesús Bautista Villar", email = "jesbauti20@gmail.com" }
]
dependencies = [
    "numpy>=1.23",
    "tqdm>=4.50",
    "pandas>=1.5",
    "scipy>=1.5",
    "lieplusplus_py>=0.3"
]

# --- Optional dependencies for tooling ---
[project.optional-dependencies]
# Developer default: everything needed to run tox/just locally
dev = [
    "tox>=4.18",
    "tox-uv>=1.9",
    "ruff>=0.9.0",
    "semgrep>=1.54.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "pre-commit>=3.0",
    "ty>=0.0.14",
    "build>=1.2.2",
    "cibuildwheel>=2.23.3",
    "twine>=5.1.1",
]
# Targeted extras so tox envs stay reproducible
lint = [
    "ruff>=0.9.0",
    "semgrep>=1.54.0",
]
tests = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "matplotlib>=3.7",
    "IPython>=8.0",
]
pre-commit = [
    "pre-commit>=3.0",
]
type-checking = [
    "ty>=0.0.14",
]
release = [
    "build>=1.2.2",
    "cibuildwheel>=2.23.3",
    "twine>=5.1.1",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]


examples = [
    "matplotlib>=3.7",
    "matplotlib-inline>=0.1.6,<0.3",
    "IPython>=8.0",
    "ipykernel",
]


# --- Hatch Configuration ---
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/ssl_simulator"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE"]
exclude = ["tests", "examples", "output"]

[[tool.uv.index]]
name = "internal-repo"
url = "http://gitea.lyapunov.local/api/packages/Swarm-Systems-Lab/pypi/simple/"
explicit = true

[tool.uv.sources]
lieplusplus_py = { index = "internal-repo" }

# --- Tool Configuration ---
[tool.ruff]
line-length = 100
exclude = ["output"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort (Import sorting)
    "UP",     # pyupgrade (Modernizes syntax automatically)
    "B",      # flake8-bugbear (Catches common bugs)
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print (Warns about print statements)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "S",
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "E501",   # Line too long (handled by formatter)
    "F403",
    "F401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603"]
"scripts/template_prune.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
# Keep test artifacts only on failure for debugging
tmp_path_retention_policy = "failed"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/ssl_simulator"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# Use uv for fast, reproducible environments
[tool.tox]
requires = ["tox-uv>=1.0"]
env_list = [
    "pre-commit",
    "lint",
    "security",
    "tests",
    "tests-fast",
    "py312",
    "py313",
    "py314",

    "docs",

]

[tool.tox.env_run_base]
# Pass environment variables to test environments
passenv = ["*"]
setenv = { UV_EXTRA_INDEX_URL = "http://gitea.lyapunov.local/api/packages/Swarm-Systems-Lab/pypi/simple/" }

[tool.tox.env.pre-commit]
description = "Run pre-commit hooks"
extras = ["pre-commit"]
commands = [
    ["pre-commit", "run", "--all-files", "--show-diff-on-failure"],
]

[tool.tox.env.lint]
description = "Run ruff linting and formatting"
extras = ["lint"]
commands = [
    ["ruff", "check", "src", "tests"],
    ["ruff", "format", "--check", "src", "tests"],
]

[tool.tox.env.security]
description = "Run semgrep security scans"
extras = ["lint"]
commands = [
    ["semgrep", "--config", "p/ci", "--config", ".semgrep.yml"],
]

[tool.tox.env.type-checking]
description = "Run ty type checks"
extras = ["type-checking"]
commands = [
    ["ty", "check"],
]

[tool.tox.env.tests]
extras = ["tests"]
commands = [
    [
        "pytest",
        "--cov=ssl_simulator",
        "--cov-report",
        "term",
        "--cov-report",
        "xml:cov.xml",
    ],
]

[tool.tox.env.tests-fast]
extras = ["tests"]
commands = [
    ["pytest", "tests", "-n", "auto", "-m", "not slow"],
]

[tool.tox.env.build]
description = "Build sdist and wheel artifacts"
extras = ["release"]
commands = [
    ["python", "-m", "build", "--sdist", "--wheel", "--outdir", "dist"],
]

[tool.tox.env.cibuildwheel]
description = "Run cibuildwheel for multiplatform wheels"
extras = ["release"]
commands = [
    ["python", "-m", "cibuildwheel", "--output-dir", "dist"],
]

[tool.tox.env.py312]
base_python = ["python3.12"]
extras = ["tests"]
commands = [
    ["pytest", "tests"],
]

[tool.tox.env.py313]
base_python = ["python3.13"]
extras = ["tests"]
commands = [
    ["pytest", "tests"],
]

[tool.tox.env.py314]
base_python = ["python3.14"]
extras = ["tests"]
commands = [
    ["pytest", "tests"],
]


[tool.tox.env.docs]
description = "Build the MkDocs site"
extras = ["docs"]
commands = [
    ["mkdocs", "build", "--clean"],
]
